# Akuanduba

./: .gitignore  CMakeLists.txt  README.md  buildthis.sh  setup.py  setup.sh
Akuanduba/core/: CoreClasses.py  Manager.py  StatusCode.py  Trigger.py  Watchdog.py  constants.py
cmake/: InstallAkuandubaFunctions.cmake
examples/NTPSync/: NTPSync.py
examples/TimedCounterFileSaving/: SampleScript.py
examples/TimedCounterFileSaving/dataframes/: SampleDataframe.py
examples/TimedCounterFileSaving/services/: SampleService.py
examples/TimedCounterFileSaving/tools/: SampleTool.py
python/: __init__.py
python/core/: Algorithm.py  EventContext.py  EventManager.py  Service.py  Trigger.py  __init__.py  constants.py
python/core/messenger/: Logger.py
python/dataframe/: EDM.py  EventStatus.py  SampleDataframe.py  __init__.py
python/services/: SampleService.py  StoreGateSvc.py  __init__.py
python/tools/: DataLog.py  SampleTool.py  __init__.py
python/triggers/: Clock.py
scripts/: SampleScript.py
